--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.12.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "tabulator-tables": "^4.6.2",
     "update": "^0.7.4",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vue-tabulator": "^1.2.2"
   },
