--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.12.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.14.0",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.5.3",
     "tabulator-tables": "^4.6.2",
+    "underscore": "^1.10.2",
     "update": "^0.7.4",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vue-select": "^3.10.3",
-    "vue-tabulator": "^1.2.2"
+    "vue-tabulator": "^1.2.2",
+    "vue-underscore": "^0.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
